#210 closed bug (fixed)
PANIC: page fault...
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | System/Kernel | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Steps to reproduce: Launch Tracker. Check "Show Disks.." in tracker settings. Right click on Disks icon and Get Info. After about a second Haiku will crash. Tested with rev16462 under vmware.
Change History (3)
comment:1 by , 19 years ago
comment:2 by , 19 years ago
Resolution: | → fixed |
---|
comment:3 by , 19 years ago
Status: | new → closed |
---|
Note:
See TracTickets
for help on using tickets.
Fixed with hrev16599.